--- a/views/layouts/main.tt
+++ b/views/layouts/main.tt
@@ -6,6 +6,7 @@
     <link rel="stylesheet" type="text/css" href="[% uri_base _ '/css/bootstrap.min.css' %]">
     <link rel="stylesheet" type="text/css" href="[% uri_base _ '/css/bootstrap-select.min.css' %]">
     <link rel="stylesheet" type="text/css" href="[% uri_base _ '/css/librecat.css' %]">
+    <link rel="stylesheet" type="text/css" href="[% uri_base _ '/css/main.css' %]">
     <script type="text/javascript" src="[% uri_base _ '/js/jquery.min.js' %]"></script>
     <script type="text/javascript" src="[% uri_base _ '/js/bootstrap.min.js' %]"></script>
     <script type="text/javascript" src="[% uri_base _ '/js/bootstrap-select.min.js' %]"></script>
