--- a/public/css/main.css
+++ b/public/css/main.css
@@ -4,3 +4,8 @@
 .input-group .form-control.form-control-identifier-value {
   width: 85%;
 }
+div.input-group.sticky .input-group-addon:first-child {
+  background-color: #fff;
+  color: #555;
+  background-image: none;
+}
