--- a/views/forms/book.tt
+++ b/views/forms/book.tt
@@ -22,21 +22,48 @@
 
   $(document).ready(function(){
 
-    $(".add-repeatable").on("click",function(evt){
+    var remove_repeatable = function(evt){
+      console.log("remove_repeatable called");
+      var form_group = $(this).closest(".form-group");
+      form_group.remove();
 
+    };
+
+    var add_repeatable = function(evt){
+      console.log("add_repeatable called");
       var re = /(\d+)/;
+      var form = $(this).closest("form");
       var form_group = $(this).closest(".form-group");
       var cloned_fg = form_group.clone();
       var inputs = cloned_fg.find("input,select");
       for ( var i = 0; i < inputs.size(); i++ ) {
 
         var input = inputs.get( i );
+        var is_select = $(input).is("select");
         var name = $(input).attr("name");
         var matches = re.exec( name );
 
         if ( matches != null ) {
 
+          var prefix = name.substr(0, matches["index"] );
+          var postfix = name.substr( matches["index"] + 1 );
+
+          var inputs = is_select ?
+            form.find("select[name^='"+ prefix + "']") :
+            form.find("input[name^='"+ prefix + "']");
+
+          if ( postfix != "" ) {
+            inputs = is_select ?
+              inputs.filter("select[name$='"+postfix+"']") :
+              inputs.filter("input[name$='"+postfix+"']");
+          }
+
+          var last_input = inputs.last();
+          name = last_input.attr("name");
+
+          matches = re.exec(name);
           idx = parseInt( matches[0] );
+
           idx++;
           name = name.substr(0, matches["index"] ) + idx + name.substr( matches["index"] + 1 );
           $(input).attr("name",name);
@@ -49,17 +76,19 @@
         }
 
       }
-      //TODO: fix in css
-      //cloned_fg.find("label").css({ visibility: "hidden" });
+
+      console.log(".add-repeatable", form_group.find(".add-repeatable").size() );
+
+      form_group.find(".add-repeatable").off().on("click",add_repeatable);
+      form_group.find(".remove-repeatable").off().on("click",remove_repeatable);
+
       cloned_fg.insertAfter( form_group );
 
-    });
-    $(".remove-repeatable").on("click",function(evt){
+    };
 
-      var form_group = $(this).closest(".form-group");
-      form_group.remove();
+    $(".add-repeatable").on("click", add_repeatable);
+    $(".remove-repeatable").on("click", remove_repeatable );
 
-    });
 
   });
 
