--- a/views/forms/book2.tt
+++ b/views/forms/book2.tt
@@ -8,6 +8,8 @@
   </div>
 </div>
 
+[% INCLUDE form_messages.tt form = form %]
+
 <form method="post" class="form-horizontal">
 
   <div class="tab_section">
@@ -29,6 +31,8 @@
 
     [% form.field("abstract").render %]
   </div>
+
+  [% form.field("accept").render %]
 
   <div class="form-group">
     <div class="col-md-offset-2">
